# query-benchmarker

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20220612143014_add_benchmark_function.down.sql  20220612143014_add_benchmark_function.up.sql  20220613133313_remove_index_users_on_tenant_id.down.sql  20220613133313_remove_index_users_on_tenant_id.up.sql
sql/: average-limit-100.sql  average-limit-200.sql  average-limit-50.sql  average-limit-500.sql  average-reverse-order.sql  average.sql  best-limit-100.sql  best-limit-200.sql  best-limit-50.sql  best-limit-500.sql  best-reverse-order.sql  best.sql
sql/coalesce_empty_string_indexes/: average-limit-100.sql  average-limit-200.sql  average-limit-50.sql  average-limit-500.sql  average-reverse-order.sql  average.sql  best-limit-100.sql  best-limit-200.sql  best-limit-50.sql  best-limit-500.sql  best-reverse-order.sql  best.sql  down.sql  up.sql
sql/multicolumn_indexes/: down.sql  up.sql
sql/single_column_indexes/: down.sql  up.sql
sql/sorted-and-fixed-columns-indexes-only/: down.sql  up.sql
sql/sorted-columns-indexes-only/: down.sql  up.sql
src/: benchmark_result.rs  benchmarker.rs  main.rs  simple_migrator.rs  utilities.rs
